--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "scripts": {
-    "lint": "gts lint",
-    "clean": "gts clean",
-    "compile": "tsc",
-    "fix": "gts fix",
-    "prepare": "npm run compile",
-    "pretest": "npm run compile",
-    "posttest": "npm run lint",
-    "dev": "nodemon src.index.ts --exec ts-node",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@types/jest": "^29.5.12",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "morgan": "^1.10.0",
-    "prisma": "^5.13.0"
-  },
-  "devDependencies": {
-    "@types/node": "20.11.5",
-    "gts": "^5.3.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.4.3"
-  }
+    "scripts": {
+        "lint": "gts lint",
+        "clean": "gts clean",
+        "compile": "tsc",
+        "fix": "gts fix",
+        "prepare": "npm run compile",
+        "pretest": "npm run compile",
+        "posttest": "npm run lint",
+        "dev": "nodemon ./src/index.ts --exec ts-node",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.14.0",
+        "@types/jest": "^29.5.12",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "morgan": "^1.10.0"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.21",
+        "@types/node": "20.11.5",
+        "express": "^4.19.2",
+        "gts": "^5.3.0",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.0",
+        "prisma": "^5.14.0",
+        "ts-jest": "^29.1.2",
+        "ts-node": "^10.9.2",
+        "typescript": "~5.4.3"
+    }
 }
