--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "axios": "^1.7.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "react": "^18.3.1",
+        "react-router-dom": "^6.23.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
